--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -187,6 +187,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dc299091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Segmentation Map\n",
+    "total_segmentator_names = [\n",
+    "    \"background\",\n",
+    "    \"spleen\",\n",
+    "    \"kidney_right\",\n",
+    "    \"kidney_left\",\n",
+    "    \"gallbladder\",\n",
+    "    \"liver\",\n",
+    "    \"stomach\",\n",
+    "    \"pancreas\",\n",
+    "    \"adrenal_gland_right\",\n",
+    "    \"adrenal_gland_left\",\n",
+    "    \"lung_upper_lobe_left\",\n",
+    "    \"lung_lower_lobe_left\",\n",
+    "    \"lung_upper_lobe_right\",\n",
+    "    \"lung_middle_lobe_right\",\n",
+    "    \"lung_lower_lobe_right\",\n",
+    "    \"esophagus\",\n",
+    "    \"trachea\",\n",
+    "    \"thyroid_gland\",\n",
+    "    \"small_bowel\",\n",
+    "    \"duodenum\",\n",
+    "    \"colon\",\n",
+    "    \"urinary_bladder\",\n",
+    "    \"prostate\",\n",
+    "    \"kidney_cyst_left\",\n",
+    "    \"kidney_cyst_right\",\n",
+    "    \"sacrum\",\n",
+    "    \"vertebrae_S1\",\n",
+    "    \"vertebrae_L5\",\n",
+    "    \"vertebrae_L4\",\n",
+    "    \"vertebrae_L3\",\n",
+    "    \"vertebrae_L2\",\n",
+    "    \"vertebrae_L1\",\n",
+    "    \"vertebrae_T12\",\n",
+    "    \"vertebrae_T11\",\n",
+    "    \"vertebrae_T10\",\n",
+    "    \"vertebrae_T9\",\n",
+    "    \"vertebrae_T8\",\n",
+    "    \"vertebrae_T7\",\n",
+    "    \"vertebrae_T6\",\n",
+    "    \"vertebrae_T5\",\n",
+    "    \"vertebrae_T4\",\n",
+    "    \"vertebrae_T3\",\n",
+    "    \"vertebrae_T2\",\n",
+    "    \"vertebrae_T1\",\n",
+    "    \"vertebrae_C7\",\n",
+    "    \"vertebrae_C6\",\n",
+    "    \"vertebrae_C5\",\n",
+    "    \"vertebrae_C4\",\n",
+    "    \"vertebrae_C3\",\n",
+    "    \"vertebrae_C2\",\n",
+    "    \"vertebrae_C1\",\n",
+    "    \"heart\",\n",
+    "    \"aorta\",\n",
+    "    \"pulmonary_vein\",\n",
+    "    \"brachiocephalic_trunk\",\n",
+    "    \"subclavian_artery_right\",\n",
+    "    \"subclavian_artery_left\",\n",
+    "    \"common_carotid_artery_right\",\n",
+    "    \"common_carotid_artery_left\",\n",
+    "    \"brachiocephalic_vein_left\",\n",
+    "    \"brachiocephalic_vein_right\",\n",
+    "    \"atrial_appendage_left\",\n",
+    "    \"superior_vena_cava\",\n",
+    "    \"inferior_vena_cava\",\n",
+    "    \"portal_vein_and_splenic_vein\",\n",
+    "    \"iliac_artery_left\",\n",
+    "    \"iliac_artery_right\",\n",
+    "    \"iliac_vena_left\",\n",
+    "    \"iliac_vena_right\",\n",
+    "    \"humerus_left\",\n",
+    "    \"humerus_right\",\n",
+    "    \"scapula_left\",\n",
+    "    \"scapula_right\",\n",
+    "    \"clavicula_left\",\n",
+    "    \"clavicula_right\",\n",
+    "    \"femur_left\",\n",
+    "    \"femur_right\",\n",
+    "    \"hip_left\",\n",
+    "    \"hip_right\",\n",
+    "    \"spinal_cord\",\n",
+    "    \"gluteus_maximus_left\",\n",
+    "    \"gluteus_maximus_right\",\n",
+    "    \"gluteus_medius_left\",\n",
+    "    \"gluteus_medius_right\",\n",
+    "    \"gluteus_minimus_left\",\n",
+    "    \"gluteus_minimus_right\",\n",
+    "    \"autochthon_left\",\n",
+    "    \"autochthon_right\",\n",
+    "    \"iliopsoas_left\",\n",
+    "    \"iliopsoas_right\",\n",
+    "    \"brain\",\n",
+    "    \"skull\",\n",
+    "    \"rib_left_1\",\n",
+    "    \"rib_left_2\",\n",
+    "    \"rib_left_3\",\n",
+    "    \"rib_left_4\",\n",
+    "    \"rib_left_5\",\n",
+    "    \"rib_left_6\",\n",
+    "    \"rib_left_7\",\n",
+    "    \"rib_left_8\",\n",
+    "    \"rib_left_9\",\n",
+    "    \"rib_left_10\",\n",
+    "    \"rib_left_11\",\n",
+    "    \"rib_left_12\",\n",
+    "    \"rib_right_1\",\n",
+    "    \"rib_right_2\",\n",
+    "    \"rib_right_3\",\n",
+    "    \"rib_right_4\",\n",
+    "    \"rib_right_5\",\n",
+    "    \"rib_right_6\",\n",
+    "    \"rib_right_7\",\n",
+    "    \"rib_right_8\",\n",
+    "    \"rib_right_9\",\n",
+    "    \"rib_right_10\",\n",
+    "    \"rib_right_11\",\n",
+    "    \"rib_right_12\",\n",
+    "    \"sternum\",\n",
+    "    \"costal_cartilages\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "f594bd78-08c3-42cb-8628-d41da8df0736",
    "metadata": {},
