Label table implemented

--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -61,134 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "14d06d04-bbce-4bd8-88d9-8b152b07d5e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nibabel as nib\n",
-    "import numpy as np\n",
-    "import pydicom\n",
-    "import datetime\n",
-    "import os\n",
-    "from scipy import interpolate\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interact, IntSlider\n",
-    "import IPython\n",
-    "from IPython.display import display, clear_output\n",
-    "from matplotlib.cm import ScalarMappable\n",
-    "\n",
-    "\n",
-    "# Upscale SUV values (256,256) to segmentation mask resolution (512,512)\n",
-    "def upscale_suv_values_3d(suv_values, new_shape):\n",
-    "    # Get the shape of the original SUV values array\n",
-    "    original_shape = suv_values.shape\n",
-    "    \n",
-    "    # Create arrays of coordinates for the original and new SUV values arrays\n",
-    "    x = np.linspace(0, 1, original_shape[0])\n",
-    "    y = np.linspace(0, 1, original_shape[1])\n",
-    "    z = np.linspace(0, 1, original_shape[2])\n",
-    "    \n",
-    "    new_x = np.linspace(0, 1, new_shape[0])\n",
-    "    new_y = np.linspace(0, 1, new_shape[1])\n",
-    "    new_z = np.linspace(0, 1, new_shape[2])\n",
-    "    \n",
-    "    # Create meshgrids of the coordinates\n",
-    "    x_mesh, y_mesh, z_mesh = np.meshgrid(x, y, z, indexing='ij')\n",
-    "    new_x_mesh, new_y_mesh, new_z_mesh = np.meshgrid(new_x, new_y, new_z, indexing='ij')\n",
-    "    \n",
-    "    # Interpolate the SUV values to the new coordinates in each dimension\n",
-    "    suv_interpolated = np.zeros(new_shape)\n",
-    "    for i in range(original_shape[2]):\n",
-    "        suv_interpolated[:, :, i] = interpolate.interpn((x, y), suv_values[:, :, i], (new_x_mesh[:, :, i], new_y_mesh[:, :, i]), method='linear', bounds_error=False, fill_value=None)\n",
-    "    \n",
-    "    return suv_interpolated\n",
-    "\n",
-    "def load_nifti_file(filepath):\n",
-    "    \"\"\"Load a NIfTI file and return the data array.\"\"\"\n",
-    "    nifti_img = nib.load(filepath)\n",
-    "    data = nifti_img.get_fdata()\n",
-    "    return data\n",
-    "\n",
-    "def convert_raw_PET_to_SUV(pet_dicom, pet_nifti):\n",
-    "    PET_data = load_nifti_file(pet_nifti)\n",
-    "    print(pet_dicom)\n",
-    "    full_path = os.path.join(pet_dicom, os.listdir(pet_dicom)[0])\n",
-    "    ds = pydicom.dcmread(full_path)\n",
-    "    \n",
-    "    # Get Scan time (Osirix uses SeriesTime, but can change to AcquisitionTime. Series time seems more precise)\n",
-    "    scantime = parse_time(ds.SeriesTime)\n",
-    "    # Start Time for the Radiopharmaceutical Injection\n",
-    "    injection_time = parse_time(ds.RadiopharmaceuticalInformationSequence[0].RadiopharmaceuticalStartTime)\n",
-    "    # Half Life for Radionuclide # seconds\n",
-    "    half_life = float(ds.RadiopharmaceuticalInformationSequence[0].RadionuclideHalfLife) \n",
-    "    # Total dose injected for Radionuclide\n",
-    "    injected_dose = float(ds.RadiopharmaceuticalInformationSequence[0].RadionuclideTotalDose)\n",
-    "    \n",
-    "    # Calculate dose decay correction factor\n",
-    "    decay_correction_factor = np.exp(-np.log(2)*((scantime-injection_time).seconds)/half_life)\n",
-    "\n",
-    "    \n",
-    "    patient_weight = ds.PatientWeight * 1000\n",
-    "    SUV_factor = (patient_weight) / (injected_dose * decay_correction_factor)\n",
-    "    \n",
-    "    return(PET_data * SUV_factor)\n",
-    "\n",
-    "def calculate_suv_statistics(roi_data, pet_data):\n",
-    "    \"\"\"Calculate SUV statistics for each unique ROI.\"\"\"\n",
-    "    unique_rois = np.unique(roi_data)\n",
-    "    suv_stats = {}\n",
-    "    \n",
-    "    for roi in unique_rois:\n",
-    "        if roi == 0:\n",
-    "            continue  # Skip the background\n",
-    "        roi_mask = roi_data == roi\n",
-    "        suv_values = pet_data[roi_mask]\n",
-    "        \n",
-    "        mean_suv = np.mean(suv_values)\n",
-    "        median_suv = np.median(suv_values)\n",
-    "        std_suv = np.std(suv_values)\n",
-    "        \n",
-    "        suv_stats[roi] = {\n",
-    "            'mean': mean_suv,\n",
-    "            'median': median_suv,\n",
-    "            'std': std_suv\n",
-    "        }\n",
-    "    return suv_stats\n",
-    "\n",
-    "# Function to parse time with or without fractional seconds\n",
-    "def parse_time(time_str):\n",
-    "    try:\n",
-    "        # Try parsing with fractional seconds\n",
-    "        return datetime.datetime.strptime(time_str, '%H%M%S.%f')\n",
-    "    except ValueError:\n",
-    "        # Fallback to parsing without fractional seconds\n",
-    "        return datetime.datetime.strptime(time_str, '%H%M%S')\n",
-    "\n",
-    "def visualize_array(array):\n",
-    "    # Define a function to plot a heatmap of a given layer\n",
-    "    def plot_heatmap(layer):\n",
-    "        clear_output(wait=True)  # Clear the previous output without flashing\n",
-    "        fig, ax = plt.subplots(figsize=(8, 6))\n",
-    "        im = ax.imshow(array[:, :, layer], cmap='viridis', origin='lower')\n",
-    "        # Create a ScalarMappable for the colorbar\n",
-    "        sm = ScalarMappable(cmap='viridis')\n",
-    "        sm.set_array(array[:, :, layer])\n",
-    "        plt.colorbar(sm, ax=ax, label='Value')\n",
-    "        ax.set_title(f'Layer {layer}')\n",
-    "        ax.set_xlabel('X')\n",
-    "        ax.set_ylabel('Y')\n",
-    "        plt.show()\n",
-    "\n",
-    "    # Use interact to create a slider for scrolling through layers\n",
-    "    interact(plot_heatmap, layer=IntSlider(min=0, max=array.shape[2] - 1, step=1, value=0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "dc299091",
+   "id": "d080e6cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +187,133 @@
     "    \"sternum\",\n",
     "    \"costal_cartilages\"\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "14d06d04-bbce-4bd8-88d9-8b152b07d5e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nibabel as nib\n",
+    "import numpy as np\n",
+    "import pydicom\n",
+    "import datetime\n",
+    "import os\n",
+    "from scipy import interpolate\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ipywidgets import interact, IntSlider\n",
+    "import IPython\n",
+    "from IPython.display import display, clear_output\n",
+    "from matplotlib.cm import ScalarMappable\n",
+    "\n",
+    "\n",
+    "# Upscale SUV values (256,256) to segmentation mask resolution (512,512)\n",
+    "def upscale_suv_values_3d(suv_values, new_shape):\n",
+    "    # Get the shape of the original SUV values array\n",
+    "    original_shape = suv_values.shape\n",
+    "    \n",
+    "    # Create arrays of coordinates for the original and new SUV values arrays\n",
+    "    x = np.linspace(0, 1, original_shape[0])\n",
+    "    y = np.linspace(0, 1, original_shape[1])\n",
+    "    z = np.linspace(0, 1, original_shape[2])\n",
+    "    \n",
+    "    new_x = np.linspace(0, 1, new_shape[0])\n",
+    "    new_y = np.linspace(0, 1, new_shape[1])\n",
+    "    new_z = np.linspace(0, 1, new_shape[2])\n",
+    "    \n",
+    "    # Create meshgrids of the coordinates\n",
+    "    x_mesh, y_mesh, z_mesh = np.meshgrid(x, y, z, indexing='ij')\n",
+    "    new_x_mesh, new_y_mesh, new_z_mesh = np.meshgrid(new_x, new_y, new_z, indexing='ij')\n",
+    "    \n",
+    "    # Interpolate the SUV values to the new coordinates in each dimension\n",
+    "    suv_interpolated = np.zeros(new_shape)\n",
+    "    for i in range(original_shape[2]):\n",
+    "        suv_interpolated[:, :, i] = interpolate.interpn((x, y), suv_values[:, :, i], (new_x_mesh[:, :, i], new_y_mesh[:, :, i]), method='linear', bounds_error=False, fill_value=None)\n",
+    "    \n",
+    "    return suv_interpolated\n",
+    "\n",
+    "def load_nifti_file(filepath):\n",
+    "    \"\"\"Load a NIfTI file and return the data array.\"\"\"\n",
+    "    nifti_img = nib.load(filepath)\n",
+    "    data = nifti_img.get_fdata()\n",
+    "    return data\n",
+    "\n",
+    "def convert_raw_PET_to_SUV(pet_dicom, pet_nifti):\n",
+    "    PET_data = load_nifti_file(pet_nifti)\n",
+    "    print(pet_dicom)\n",
+    "    full_path = os.path.join(pet_dicom, os.listdir(pet_dicom)[0])\n",
+    "    ds = pydicom.dcmread(full_path)\n",
+    "    \n",
+    "    # Get Scan time (Osirix uses SeriesTime, but can change to AcquisitionTime. Series time seems more precise)\n",
+    "    scantime = parse_time(ds.SeriesTime)\n",
+    "    # Start Time for the Radiopharmaceutical Injection\n",
+    "    injection_time = parse_time(ds.RadiopharmaceuticalInformationSequence[0].RadiopharmaceuticalStartTime)\n",
+    "    # Half Life for Radionuclide # seconds\n",
+    "    half_life = float(ds.RadiopharmaceuticalInformationSequence[0].RadionuclideHalfLife) \n",
+    "    # Total dose injected for Radionuclide\n",
+    "    injected_dose = float(ds.RadiopharmaceuticalInformationSequence[0].RadionuclideTotalDose)\n",
+    "    \n",
+    "    # Calculate dose decay correction factor\n",
+    "    decay_correction_factor = np.exp(-np.log(2)*((scantime-injection_time).seconds)/half_life)\n",
+    "\n",
+    "    \n",
+    "    patient_weight = ds.PatientWeight * 1000\n",
+    "    SUV_factor = (patient_weight) / (injected_dose * decay_correction_factor)\n",
+    "    \n",
+    "    return(PET_data * SUV_factor)\n",
+    "\n",
+    "def calculate_suv_statistics(roi_data, pet_data):\n",
+    "    \"\"\"Calculate SUV statistics for each unique ROI.\"\"\"\n",
+    "    unique_rois = np.unique(roi_data)\n",
+    "    suv_stats = {}\n",
+    "    \n",
+    "    for roi in unique_rois:\n",
+    "        if roi == 0:\n",
+    "            continue  # Skip the background\n",
+    "        roi_mask = roi_data == roi\n",
+    "        suv_values = pet_data[roi_mask]\n",
+    "        \n",
+    "        mean_suv = np.mean(suv_values)\n",
+    "        max_suv = np.max(suv_values)\n",
+    "        median_suv = np.median(suv_values)\n",
+    "        \n",
+    "        \n",
+    "        suv_stats[total_segmentator_names[roi]] = {\n",
+    "            'mean': mean_suv,\n",
+    "            'max': max_suv,\n",
+    "            'median': median_suv\n",
+    "        }\n",
+    "    return suv_stats\n",
+    "\n",
+    "# Function to parse time with or without fractional seconds\n",
+    "def parse_time(time_str):\n",
+    "    try:\n",
+    "        # Try parsing with fractional seconds\n",
+    "        return datetime.datetime.strptime(time_str, '%H%M%S.%f')\n",
+    "    except ValueError:\n",
+    "        # Fallback to parsing without fractional seconds\n",
+    "        return datetime.datetime.strptime(time_str, '%H%M%S')\n",
+    "\n",
+    "def visualize_array(array):\n",
+    "    # Define a function to plot a heatmap of a given layer\n",
+    "    def plot_heatmap(layer):\n",
+    "        clear_output(wait=True)  # Clear the previous output without flashing\n",
+    "        fig, ax = plt.subplots(figsize=(8, 6))\n",
+    "        im = ax.imshow(array[:, :, layer], cmap='viridis', origin='lower')\n",
+    "        # Create a ScalarMappable for the colorbar\n",
+    "        sm = ScalarMappable(cmap='viridis')\n",
+    "        sm.set_array(array[:, :, layer])\n",
+    "        plt.colorbar(sm, ax=ax, label='Value')\n",
+    "        ax.set_title(f'Layer {layer}')\n",
+    "        ax.set_xlabel('X')\n",
+    "        ax.set_ylabel('Y')\n",
+    "        plt.show()\n",
+    "\n",
+    "    # Use interact to create a slider for scrolling through layers\n",
+    "    interact(plot_heatmap, layer=IntSlider(min=0, max=array.shape[2] - 1, step=1, value=0))\n"
    ]
   },
   {
