Label table implemented and max calculated in place of std

--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -382,8 +382,7 @@
    ],
    "source": [
     "# Jupyter magic command to display plots inline\n",
-    "%matplotlib nbagg\n",
-    "visualize_array(SUV_vals)\n"
+    "visualize_array(SUV_vals)"
    ]
   },
   {
