--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "d080e6cd",
    "metadata": {
     "jupyter": {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "14d06d04-bbce-4bd8-88d9-8b152b07d5e5",
    "metadata": {
     "jupyter": {
@@ -409,7 +409,7 @@
     "    for roi in unique_rois:\n",
     "        print(\"Working on roi: \", total_segmentator_names[roi])\n",
     "        print(roi)\n",
-    "        if roi == 0 or roi != 10 or roi != 11 or roi != 12 or roi != 13 or roi != 14:\n",
+    "        if roi == 0:\n",
     "            continue  # Skip the background\n",
     "\n",
     "        if roi == 10 or roi == 11 or roi == 12 or roi == 13 or roi == 14:\n",
@@ -1269,7 +1269,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "{'COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz': {}}\n"
+      "{'COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz': {'lung_upper_lobe_left': {'mean': 1.1679571066193066, 'max': 11.90136778872643, 'median': 1.045392745935574, 'num_val': 248547}, 'lung_lower_lobe_left': {'mean': 0.9261007089745821, 'max': 2.972581314902713, 'median': 0.9258813927182732, 'num_val': 189133}, 'lung_upper_lobe_right': {'mean': 1.070926700684857, 'max': 3.2887667534885434, 'median': 1.0006360389523843, 'num_val': 205120}, 'lung_middle_lobe_right': {'mean': 1.1091079809303335, 'max': 3.205837434336892, 'median': 1.033418732321009, 'num_val': 93306}, 'lung_lower_lobe_right': {'mean': 1.0935224122149239, 'max': 3.0253696927474754, 'median': 1.0764758810092852, 'num_val': 207975}}}\n"
      ]
     }
    ],
@@ -1299,6 +1299,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b5243bca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lung_upper_lobe_left': {'mean': 1.1679571066193066,\n",
+       "  'max': 11.90136778872643,\n",
+       "  'median': 1.045392745935574,\n",
+       "  'num_val': 248547},\n",
+       " 'lung_lower_lobe_left': {'mean': 0.9261007089745821,\n",
+       "  'max': 2.972581314902713,\n",
+       "  'median': 0.9258813927182732,\n",
+       "  'num_val': 189133},\n",
+       " 'lung_upper_lobe_right': {'mean': 1.070926700684857,\n",
+       "  'max': 3.2887667534885434,\n",
+       "  'median': 1.0006360389523843,\n",
+       "  'num_val': 205120},\n",
+       " 'lung_middle_lobe_right': {'mean': 1.1091079809303335,\n",
+       "  'max': 3.205837434336892,\n",
+       "  'median': 1.033418732321009,\n",
+       "  'num_val': 93306},\n",
+       " 'lung_lower_lobe_right': {'mean': 1.0935224122149239,\n",
+       "  'max': 3.0253696927474754,\n",
+       "  'median': 1.0764758810092852,\n",
+       "  'num_val': 207975}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "editedStats[\"COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "43c29c2a-272b-4916-8be4-db1a1d47ec94",
    "metadata": {},
@@ -1308,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "76015c8c-51a4-46d4-b46c-a5d0631d5da1",
    "metadata": {
     "scrolled": true
@@ -1324,10 +1364,10 @@
     {
      "data": {
       "text/plain": [
-       "5.512200257275254"
+       "4.738929834304957"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1376,7 @@
     "suv_dict = np.load('true_suv_stats.npy',allow_pickle='TRUE').item()\n",
     "print(\"test\")\n",
     "data = suv_dict['COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz'] # displays \"world\"\n",
-    "extractPatientStats(data, 'lung', 'max')\n",
+    "extractPatientStats(data, 'heart', 'mean')\n",
     "#print(len(suv_dict['Healthy Controls_1341792-Sub005-A01-NE_20100912.nii.gz'])) # displays \"world\"\n"
    ]
   },
