updated readability. about to process brain

--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "14d06d04-bbce-4bd8-88d9-8b152b07d5e5",
    "metadata": {
     "jupyter": {
@@ -412,6 +412,7 @@
     "        if roi == 0:\n",
     "            continue  # Skip the background\n",
     "\n",
+    "        # Remove this if statement when doing batch statistics. Only here to save time and only calculate lung statistics\n",
     "        if roi == 10 or roi == 11 or roi == 12 or roi == 13 or roi == 14:\n",
     "            roi_mask = roi_data == roi\n",
     "            suv_values = pet_data[roi_mask]\n",
@@ -9651,7 +9652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "76015c8c-51a4-46d4-b46c-a5d0631d5da1",
    "metadata": {
     "scrolled": true
@@ -9670,7 +9671,7 @@
        "1.0579890266021554"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9693,7 +9694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "259dec9e-d0ef-4836-87a4-729da4da8244",
    "metadata": {},
    "outputs": [
@@ -9779,7 +9780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "7e95599e-66f7-4e80-a9eb-98ed30c7b06a",
    "metadata": {
     "scrolled": true
@@ -9838,7 +9839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9df96951-5477-49f2-9e8b-1e81441350e9",
    "metadata": {},
    "outputs": [
