lung stats obtained

--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -413,7 +413,7 @@
     "            continue  # Skip the background\n",
     "\n",
     "        # Remove this if statement when doing batch statistics. Only here to save time and only calculate lung statistics\n",
-    "        if roi == 10 or roi == 11 or roi == 12 or roi == 13 or roi == 14:\n",
+    "        if roi == 90:\n",
     "            roi_mask = roi_data == roi\n",
     "            suv_values = pet_data[roi_mask]\n",
     "            if len(suv_values) == 0:\n",
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9159262f-d954-425f-b53c-ce519f220696",
    "metadata": {
     "scrolled": true
@@ -995,7 +995,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "COVID Patients_1697954_FDG_COVID_Pt006_CB_20130506.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt002_JP_20121026.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -1232,7 +1232,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt007_ZB_20121222.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -1469,7 +1469,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt007_ZB_20130426.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt003_LC_20121029.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -1706,7 +1706,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt008_NT_20121227.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt003_LC_20130228.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -1943,7 +1943,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt008_NT_20130429.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt004_MR_20121129.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -2180,7 +2180,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt009_VB_20130118.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt004_MR_20130411.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -2417,7 +2417,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt009_VB_20130520.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt006_CB_20130104.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -2654,7 +2654,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt010_KH_20130105.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt006_CB_20130506.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -2891,7 +2891,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt010_KH_20130503.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt007_ZB_20121222.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -3128,7 +3128,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt015_FM_20130502.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt007_ZB_20130426.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -3365,7 +3365,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt015_FM_20130907.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt008_NT_20121227.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -3602,7 +3602,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt017_ST_20130518.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt008_NT_20130429.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -3839,7 +3839,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt017_ST_20130921.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt009_VB_20130118.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -4076,7 +4076,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt018_MW_20130517.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt009_VB_20130520.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -4313,7 +4313,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt018_MW_20130915.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt010_KH_20130105.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -4550,7 +4550,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub001-A01-TJ_20100905.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt010_KH_20130503.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -4787,7 +4787,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub005-A01-NE_20100912.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt014_LO_20130418.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -5024,7 +5024,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub011-A01-KE_20101122.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt014_LO_20130818.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -5261,7 +5261,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub012-A01-BJ_20101127.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt015_FM_20130502.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -5498,7 +5498,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub013-A01-MY_20101218.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt015_FM_20130907.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -5735,7 +5735,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub017-A01-CA_20110226.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt017_ST_20130518.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -5972,7 +5972,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub024-A01-WWW_20110204.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt017_ST_20130921.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -6209,7 +6209,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub025-A01-LD_20110303.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt018_MW_20130517.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -6446,7 +6446,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub027-A01-KB_20110307.seg.nrrd\n",
+      "COVID Patients_1697954_FDG_COVID_Pt018_MW_20130915.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -6683,7 +6683,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub031-A01-MJ_20110410.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub001-A01-TJ_20100905.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -6920,7 +6920,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub032-A01-AMB_20110409.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub005-A01-NE_20100912.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -7157,7 +7157,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub033-A01-HBE_20110403.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub011-A01-KE_20101122.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -7394,7 +7394,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "Healthy Controls_1341792-Sub034-A01-HMN_20110401.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub012-A01-BJ_20101127.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -7631,7 +7631,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt002_JP_20121026.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub013-A01-MY_20101218.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -7868,7 +7868,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub017-A01-CA_20110226.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -8105,7 +8105,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt003_LC_20121029.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub024-A01-WWW_20110204.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -8342,7 +8342,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt003_LC_20130228.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub025-A01-LD_20110303.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -8579,7 +8579,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt004_MR_20121129.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub027-A01-KB_20110307.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -8816,7 +8816,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt004_MR_20130411.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub031-A01-MJ_20110410.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -9053,7 +9053,7 @@
       "116\n",
       "Working on roi:  costal_cartilages\n",
       "117\n",
-      "COVID Patients_1697954_FDG_COVID_Pt006_CB_20130104.seg.nrrd\n",
+      "Healthy Controls_1341792-Sub032-A01-AMB_20110409.nrrd\n",
       "Working on roi:  background\n",
       "0\n",
       "Working on roi:  spleen\n",
@@ -9296,7 +9296,7 @@
    "source": [
     "import nrrd\n",
     "\n",
-    "segmentation_dir = home_dir + \"Segmentations and PET NIFTIs/Lung/\"\n",
+    "segmentation_dir = home_dir + \"Segmentations and PET NIFTIs/Edited Organs/Brain/\"\n",
     "\n",
     "stats = {}\n",
     "\n",
@@ -9305,7 +9305,10 @@
     "        if segmentation.is_file():\n",
     "            print(segmentation.name)\n",
     "            #pet_name = segmentation.name + \".gz\"\n",
-    "            pet_name = segmentation.name[:-8] + \"nii.gz\"\n",
+    "\n",
+    "            # Change this from -4 to something else depending on the file extension\n",
+    "\n",
+    "            pet_name = segmentation.name[:-4] + \"nii.gz\"\n",
     "            seg_dir = os.path.join(segmentation_dir, segmentation)\n",
     "            #segmentation_img = nib.load(seg_dir)\n",
     "            # segmentation_data = segmentation_img.get_fdata()\n",
@@ -9321,7 +9324,7 @@
     "            stats[pet_name] = calculate_suv_statistics(segmentation_data, SUV_vals[pet_name])\n",
     "\n",
     "\n",
-    "np.save('lung_true_suv_stats.npy', stats)"
+    "np.save('brain_true_suv_stats.npy', stats)"
    ]
   },
   {
@@ -9604,38 +9607,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "b5243bca",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'lung_upper_lobe_left': {'mean': 1.1679571066193066,\n",
-       "  'max': 11.90136778872643,\n",
-       "  'median': 1.045392745935574,\n",
-       "  'num_val': 248547},\n",
-       " 'lung_lower_lobe_left': {'mean': 0.9261007089745821,\n",
-       "  'max': 2.972581314902713,\n",
-       "  'median': 0.9258813927182732,\n",
-       "  'num_val': 189133},\n",
-       " 'lung_upper_lobe_right': {'mean': 1.070926700684857,\n",
-       "  'max': 3.2887667534885434,\n",
-       "  'median': 1.0006360389523843,\n",
-       "  'num_val': 205120},\n",
-       " 'lung_middle_lobe_right': {'mean': 1.1091079809303335,\n",
-       "  'max': 3.205837434336892,\n",
-       "  'median': 1.033418732321009,\n",
-       "  'num_val': 93306},\n",
-       " 'lung_lower_lobe_right': {'mean': 1.0935224122149239,\n",
-       "  'max': 3.0253696927474754,\n",
-       "  'median': 1.0764758810092852,\n",
-       "  'num_val': 207975}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'editedStats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43meditedStats\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCOVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'editedStats' is not defined"
+     ]
     }
    ],
    "source": [
@@ -9652,7 +9637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "76015c8c-51a4-46d4-b46c-a5d0631d5da1",
    "metadata": {
     "scrolled": true
@@ -9668,19 +9653,19 @@
     {
      "data": {
       "text/plain": [
-       "1.0579890266021554"
+       "5.839126748477961"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "suv_dict = np.load('lung_true_suv_stats.npy',allow_pickle='TRUE').item()\n",
+    "suv_dict = np.load('brain_true_suv_stats.npy',allow_pickle='TRUE').item()\n",
     "print(\"test\")\n",
     "data = suv_dict['COVID Patients_1697954_FDG_COVID_Pt002_JP_20130223.nii.gz'] # displays \"world\"\n",
-    "extractPatientStats(data, 'lung', 'mean')\n",
+    "extractPatientStats(data, 'brain', 'mean')\n",
     "#print(len(suv_dict['Healthy Controls_1341792-Sub005-A01-NE_20100912.nii.gz'])) # displays \"world\"\n"
    ]
   },
