aorta calculations are off

--- a/PET SUV Statistics.ipynb
+++ b/PET SUV Statistics.ipynb
@@ -3892,7 +3892,7 @@
     "legend = ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "\n",
     "# Save the figure as a JPEG file\n",
-    "plt.savefig(f'{organ}_values_comparison.jpg', format='jpg', bbox_inches='tight')\n",
+    "#plt.savefig(f'{organ}_values_comparison.jpg', format='jpg', bbox_inches='tight')\n",
     "plt.show()\n",
     "plt.close()\n"
    ]
